[🚀 사이클2 - 미션 (블랙잭 게임 실행)] 테리 미션 제출합니다. (#1128)
* refactor: ErrorMessage 제거 및 예외 메시지 인라인화 (사이클 1 피드백 반영)

- ErrorMessage enum을 삭제하고 예외 발생 지점으로 메시지 이동
- 에러 메시지에 [ERROR] 접두사 추가
- InputView의 readHitOrStand 반환 타입을 boolean으로 변경해 컨트롤러 의존성 완화
- 예외 테스트 시의 구체적인 메시지 검증 제거
- Main 코드 가독성 개선

* refactor: 컨트롤러 캡슐화 및 에러 메시지 출력 포맷 중앙화

- Controller 내 불필요하게 열려있던 public 메서드를 private으로 변경해 캡슐화 강화
- 각 도메인과 InputView에 산발적으로 존재하던 "[ERROR]" 접두사 문자열을 제거하고, OutputView에서 에러 메시지를 출력할 때 일괄적으로 포맷팅하도록 구조 개선

* docs: 블랙잭 게임 배팅 기능 요구사항 및 도메인 규칙 명세 추가 (사이클 2)

- 주요 도메인 용어(Blackjack, Bust, Hit/Stand) 정의 추가
- 추가된 배팅 기능을 구현하기 위한 세부 기능 목록 추가
- 사용자 입력값 유효성 검사와 도메인 규칙 검증의 책임을 명시적으로 분리
- 엣지 케이스 처리 정책 명시

* docs: 배팅 금액 유효성 검사의 책임 재분류

- '정수 범위 초과' 예외를 도메인 규칙 검증에서 사용자 입력값 유효성 검사로 이동
- 데이터 타입 변환의 책임은 InputView에, 비즈니스 규칙은 도메인에 있도록 책임을 명확히 분리

* docs: Ace 카드 점수 계산 도메인 규칙 명세화

- 코드 상에 구현되어 있는 Ace 카드의 유동적 점수 계산(1점 / 11점 판별) 로직을 기능 명세에 구체적으로 반영
- Ace 카드가 여러 장 포함될 경우의 한계(11점으로 계산 가능한 Ace는 최대 1장) 등 엣지 케이스 명시
- 코드와 기능 요구 사항 문서의 동기화를 통해 도메인 규칙의 가시성 확보

* feat: Cards 도메인의 카드 추가 제한 기능 추가

- 21점 이상일 때 카드를 추가할 수 없는 도메인 규칙 예외 발생 로직 및 검증 추가
- 경계값(21점 미만, 21점, 21점 초과)에 따른 상태 판정 로직 테스트 작성
- 카드 생성 private 메서드 도입으로 테스트 코드 중복 개선

* docs: 카드 중복 추가 방지 도메인 규칙 명세 추가

- 이미 보유하고 있는 동일한 카드를 중복해서 추가하려는 경우의 예외 처리 명시
- 카드를 추가로 받을 때마다 사전 검증되어야 하는 공통 확인 사항을 명시적으로 목록화
- 예외 처리 및 상세 조건 등 하위 항목까지 체크박스를 부여해, 기능 구현 및 테스트 진행도를 더욱 세밀하게 확인할 수 있도록
문서 양식 개선

* feat(Cards): 중복 카드 추가 방지 기능 추가

* feat(Dealer): 카드 추가 방지 기능 구현

* feat(GameResult): 딜러 상태에 따른 결과 계산 방지 기능 추가

* refactor: 방어적 복사 방식 변경을 통해 불변성 강화

- 기존 Collections.unmodifiableList 의 'View' 방식에서 'Snapshot' 방식인
List.copyOf로 변경
- 원본 리스트의 변경이 도메인 객체 내부 리스트에 영향을 주지 않도록 원본과의 참조 연결을 완전히 차단

* feat(BetMoney): 배팅 금액 도메인 규칙 검증 기능 추가

- 배팅 금액을 관리하는 BetMoney 객체 구현
- 0 이하의 금액 입력 시 예외 처리 로직 추가

* feat(InputView): 배팅 금액 사용자 입력값 유효성 검사 기능 추가

- 배팅 금액이 공백인 경우 예외 처리
- 숫자가 아닌 문자를 입력한 경우 예외 처리
- 배팅 금액이 정수 범위를 초과하는 경우 예외 처리

* feat: 각 플레이어에게 배팅 금액을 입력받는 기능 추가

- 컨트롤러에서 플레이어별로 배팅 금액을 입력받아 Player 객체를 생성하는 흐름 구현
- Pla