@@ -1,13 +1,12 @@
 package domain;
 
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Iterator;
 import java.util.List;
 
-public class Cards implements Iterable<Card> {
+public class Cards {
     private static final int BUST_CRITERIA = 21;
     private static final int ACE_EXTRA_SCORE = 10;
+    private static final int BLACKJACK_CARD_SIZE = 2;
 
     private final List<Card> cards;
 
@@ -18,7 +17,6 @@ public class Cards implements Iterable<Card> {
     public void addCard(Card card) {
         cards.add(card);
     }
-
 
     public int calculateCardScoreSum() {
         int scoreSum = getScoreSumWithBasicAceScore();
@@ -48,12 +46,11 @@ public class Cards implements Iterable<Card> {
         return calculateCardScoreSum() > BUST_CRITERIA;
     }
 
-    @Override
-    public Iterator<Card> iterator() {
-        return Collections.unmodifiableList(cards).iterator();
+    public boolean isBlackJack() {
+        return cards.size() == BLACKJACK_CARD_SIZE && calculateCardScoreSum() == BUST_CRITERIA;
     }
 
     public List<Card> getCards() {
-        return Collections.unmodifiableList(cards);
+        return List.copyOf(cards);
     }
 }
